--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 	</section>
 	<!--JAVASCRIPT-->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<!-- <script type="text/javascript" src="js/app.js"></script> -->
-	<script type="text/javascript" src="js/prueba.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
